(stretch goal): Make navigation fixed

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,11 @@
 // Home Content
 
 .home {
-
+  margin-top: 8.5rem;
+  @media @phone {
+    margin-top: 9.5rem;
+    
+  }
   .intro {
     margin: 0 auto;
 
